[tool.poetry]
name = "castlabs-challenge"
version = "0.1.0"
description = "castLabs Python Programming Task"
authors = ["Pedro Romano <pedro@paparomeo.net>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
