[tool.poetry]
name = "castlabs-challenge"
version = "0.1.0"
description = "castLabs Python Programming Task"
authors = ["Pedro Romano <pedro@paparomeo.net>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
mypy = "^0.782"
pylint = "^2.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
