[tool.poetry]
name = "castlabs-challenge"
version = "0.1.0"
description = "castLabs Python Programming Task"
authors = ["Pedro Romano <pedro@paparomeo.net>"]

[tool.poetry.dependencies]
python = "^3.8"
starlette = "^0.13.6"
uvicorn = "^0.11.6"
httpx = "^0.13.3"
authlib = "^0.14.3"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
mypy = "^0.782"
pylint = "^2.5.3"
pytest = "^5.4.3"
coverage = "^5.2"

[tool.coverage.run]
source = ["app"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
